Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11876

[system test][kv unix] could not stop couchbase server unless force kill beam.smp

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Centos 6.4 64-bit

    Description

      nstall couchbase server 3.0.0-1089 on 8 nodes
      1:172.23.107.195
      2:172.23.107.196
      3:172.23.107.197
      4:172.23.107.199
      5:172.23.107.200
      6:172.23.107.202
      7:172.23.107.201

      8:172.23.107.203

      Create a cluster of 7 nodes
      Create 2 buckets: default and sasl-2 (no view)
      Load 25+ M items to each bucket to bring down active resident ratio down to 80%
      Do update, expired and delete on both buckets in 3 hours.
      Then add node 203 to cluster. Rebalance hang when rebalance second bucket with low priority setting. MB-11870
      Shutdown cluster to uninstall couchbase server. Could not shutdown coucbase server.
      Reboot all servers.
      Then uninstall couchbase server. Uninstall failed due to could not stop couchbase server.
      Manually stop couchbase server on node 195 /etc/init.d/couchbase-server stop (failed)
      Only using command line killall -9 beam.smp to force stop couchbase server

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thuan Thuan Nguyen
            thuan Thuan Nguyen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty