MB-11876 Check for new priority buckets after wakeup

If threads do not check for the presence of newly registered
buckets, then a rare race condition can happen where a thread
is unaware of the presence of a low priority bucket and keeps
continously checking the high priority Q which has no work.
This would block normal shutdown

Change-Id: Ic59ccbed69c205251e7897f349445d8982ec7be5
Reviewed-on: http://review.couchbase.org/40311
Tested-by: Sundararaman Sridharan <sundar@couchbase.com>
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>